[package]
name = "binary-merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-db = { version = "0.15.2", default-features = false }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
bincode = {version = "1.3.3" }

[dev-dependencies]
sha3 = { version = "0.10" }
hash256-std-hasher = { version = "0.15.2" }
memory-db = { version = "0.29.0"}
winterfell = "0.4.0"

[features]
default = ["std"]
std = [
    "hash-db/std",
    "serde/std",
]
